# parallel-roofit-scripts

./: .gitattributes  .gitignore  Binned_scaling.ipynb  Builder.py  GaussMinimizer.cpp  GaussMinimizer.py  GradMinimizer.cpp  GradMinimizer_Ndim.cpp  GradMinimizer_Ndim_hierarchical.cpp  NewWSBuilder.ipynb  README.md  WorkspaceBuilder.ipynb  WorkspaceOffline.py  acat19.cpp  acat19_ND_gauss.cpp  buildBinnedTest3.cxx  caching_nut.py  higgs_fit_20210310.cpp  higgs_fit_20210310_comb.conf  higgs_fit_20210310_ggF.conf  histpdf.C  histpdf_data.py  int2ext_precision_problem.py  int2ext_precision_problem_2.py  int2ext_precision_solution.py  int2ext_precision_solution_lourens.py  lydia1_print_params_observs.C  lydia2_obs_par.py  lydia2_params_observs.txt  lydia2_print_params_observs.C  onlyGradMinimizer.cpp  only_normal_Minimizer.cpp  roofit_demo.cpp  roofit_demo_fitonly.cpp  runBinnedTest.cxx  tensorflow_histpdf.py  tensorflow_pdfs.py  tensorflow_roofit_demo-cProfile.out  tensorflow_roofit_demo-callgrind.pylog  tensorflow_roofit_demo_2-stripped.py  (+9 more)
20210410_analyze_performance_timestamps/: kladblok timestamps verwerken.ipynb
HSG7_ROOT_build/: .gitignore  hsg7build.html
caching_nut_old/: model_graphviz_analyze.py  model_graphviz_analyze2_lydia2-graph_tool.py  model_graphviz_analyze2_lydia2.py  model_graphviz_analyze3-graph_tool.py  model_graphviz_analyze3-graph_tool_lydia2.py  model_graphviz_analyze4-graph_tool-topo.py
code_nikhef-edit_sep28/: lydia1_obs_par.py  model_to_graphviz.C  (+2 more)
testing/zmq/: CMakeLists.txt  double_bind.cpp  pubsub_vs_many_pipes.cpp  utils.cpp  utils.hpp
(+171 files in other folders)
